name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , obelisk-executable-config-lookup
               , text
               , containers
               , megaparsec
               , time
               , shower
               , dependent-sum
               , snap
  exposed-modules:
    Backend
    Backend.Plugin.TT
  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
