name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base-noprelude
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , obelisk-executable-config-lookup
               , text
               , containers
               , megaparsec
               , time
               , shower
               , dependent-sum
               , snap
               , aeson
               , path
               , path-io >= 1.3.0
               , bytestring
               , rib >= 0.4.0.0
  exposed-modules:
    Backend
    Backend.Plugin.TT
    Backend.Plugin.Wiki
  ghc-options: -Wall
               -Wcompat
               -Widentities
               -Wincomplete-uni-patterns
               -Wpartial-fields
               -Wredundant-constraints
               -Wmissing-deriving-strategies
               -fhide-source-paths

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base-noprelude
               , backend
               , common
               , frontend
               , obelisk-backend
