name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
               , time
               , aeson
               , path
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Common.Api
    Common.Route
    Common.Plugin.TT
    Common.Plugin.Wiki
