name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base-noprelude
               , relude
               , obelisk-route
               , mtl
               , text
               , time
               , aeson
               , path
               , exceptions
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Prelude
    Common.Api
    Common.Route
    Common.Plugin.TT
    Common.Plugin.TT.TimeRange
    Common.Plugin.Wiki
